# jarbas

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  dkpush.sh  pyproject.toml  run_web.sh
jarbas/: __init__.py  cli.py  configs.py  core.py  llms.py  main_cli.py  main_web.py  tooledchat.py  tools.py
tests/: __init__.py  test_configs.py  test_core.py  test_llms.py  test_tooledchat.py  test_tools.py
